add buttons, basic layout

--- a/index.html
+++ b/index.html
@@ -9,6 +9,34 @@
     <title>Calculator</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="screen">
+            <div class="screen__output">
+                <div class="screen__output--current">0</div>
+                <div class="screen__output--previous"></div>
+            </div>
+        </div>
+        <div class="buttons">
+            <button class="button button--function" data-type="clear">AC</button>
+            <button class="button button--function" data-type="percent">%</button>
+            <button class="button button--function" data-type="delete">⌫</button>
+            <button class="button button--operator" data-type="operator" data-value="/">÷</button>
+            <button class="button" data-type="number" data-value="7">7</button>
+            <button class="button" data-type="number" data-value="8">8</button>
+            <button class="button" data-type="number" data-value="9">9</button>
+            <button class="button button--operator" data-type="operator" data-value="*">×</button>
+            <button class="button" data-type="number" data-value="4">4</button>
+            <button class="button" data-type="number" data-value="5">5</button>
+            <button class="button" data-type="number" data-value="6">6</button>
+            <button class="button button--operator" data-type="operator" data-value="-">-</button>
+            <button class="button" data-type="number" data-value="1">1</button>
+            <button class="button" data-type="number" data-value="2">2</button>
+            <button class="button" data-type="number" data-value="3">3</button>
+            <button class="button button--operator" data-type="operator" data-value="+">+</button>
+            <button class="button button--zero" data-type="number" data-value="0">0</button>
+            <button class="button" data-type="number" data-value=".">.</button>
+            <button class="button button--operator" data-type="equal" data-value="=">=</button>
+        </div>
+    </div>
 </body>
 </html>
