--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="row">
                 <button class="button" data-type="number" data-value=".">.</button>
                 <button class="button button--zero" data-type="number" data-value="0">0</button>
-                <button class="button button--function" data-type="delete">⌫</button>
+                <button class="button button-delete button--function" data-type="delete">⌫</button>
                 <button class="button button--operator button--equal" data-type="equal" data-value="=">=</button>
             </div>
         </div>
