update style, add fonts

--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
 </head>
 <body>
     <div class="container">
+        <div class="header">
+            <div class="logo">CASIO</div>
+            <div class="bta3etelshams"></div>
+            <div class="model">MX-12B</div>
+        </div>
         <div class="screen">
             <div class="screen__output">
-                <div class="screen__output--current">0</div>
-                <div class="screen__output--previous"></div>
+                0
             </div>
         </div>
         <div class="buttons">
             <div class="row">
                 <button class="button button--function button--ac" data-type="clear">AC</button>
-                <button class="button button--function button--sign" data-type="sign">±</button>
-                <button class="button button--function button--percent" data-type="percent">%</button>
+                <button class="button button--function button--sign" data-type="sign" data-value="+/-">±</button>
+                <button class="button button--function button--percent" data-type="percent" data-value="%">%</button>
                 <button class="button button--operator" data-type="operator" data-value="*">×</button>
             </div>
             <div class="row">
