--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <title>Calculator</title>
 </head>
 <body>
+    <div class="out"></div>
     <div class="container">
         <div class="header">
             <div class="logo">CASIO</div>
             <div class="bta3etelshams"></div>
-            <div class="model">MX-12B</div>
+            <div class="model">fx-07775000</div>
         </div>
         <div class="screen">
             <div class="screen__output">
