--- a/index.html
+++ b/index.html
@@ -22,35 +22,32 @@
             </div>
         </div>
         <div class="buttons">
-            <div class="row">
+            <div class="column">
                 <button class="button button--function button--ac" data-type="clear">AC</button>
-                <button class="button button--function button--sign" data-type="sign" data-value="+/-">±</button>
-                <button class="button button--function button--percent" data-type="percent" data-value="%">%</button>
-                <button class="button button--operator" data-type="operator" data-value="*">×</button>
-            </div>
-            <div class="row">
                 <button class="button" data-type="number" data-value="7">7</button>
-                <button class="button" data-type="number" data-value="8">8</button>
-                <button class="button" data-type="number" data-value="9">9</button>
-                <button class="button button--operator" data-type="operator" data-value="/">÷</button>
-            </div>
-            <div class="row">
                 <button class="button" data-type="number" data-value="4">4</button>
-                <button class="button" data-type="number" data-value="5">5</button>
-                <button class="button" data-type="number" data-value="6">6</button>
-                <button class="button button--operator" data-type="operator" data-value="-">-</button>
-            </div>
-            <div class="row">
                 <button class="button" data-type="number" data-value="1">1</button>
-                <button class="button" data-type="number" data-value="2">2</button>
-                <button class="button" data-type="number" data-value="3">3</button>
-                <button class="button button--operator" data-type="operator" data-value="+">+</button>
-            </div>
-            <div class="row">
                 <button class="button" data-type="number" data-value=".">.</button>
+            </div>
+            <div class="column">
+                <button class="button button--function button--sign" data-type="sign" data-value="+/-">+/-</button>
+                <button class="button" data-type="number" data-value="8">8</button>
+                <button class="button" data-type="number" data-value="5">5</button>
+                <button class="button" data-type="number" data-value="2">2</button>
                 <button class="button button--zero" data-type="number" data-value="0">0</button>
-                <button class="button button-delete button--function" data-type="delete">⌫</button>
+            </div>
+            <div class="column">
+                <button class="button button--function button--percent" data-type="percent" data-value="%">%</button>
+                <button class="button" data-type="number" data-value="9">9</button>
+                <button class="button" data-type="number" data-value="6">6</button>
+                <button class="button" data-type="number" data-value="3">3</button>
                 <button class="button button--operator button--equal" data-type="equal" data-value="=">=</button>
+            </div>
+            <div class="column">
+                <button class="button button--operator" data-type="operator" data-value="*">×</button>
+                <button class="button button--operator" data-type="operator" data-value="/">÷</button>
+                <button class="button button--operator" data-type="operator" data-value="-">-</button>
+                <button class="button button--operator button--add" data-type="operator" data-value="+">+</button>
             </div>
         </div>
     </div>
