--- a/index.html
+++ b/index.html
@@ -17,37 +17,35 @@
             <div class="model">fx-07775000</div>
         </div>
         <div class="screen">
-            <div class="screen__output">
-                0
-            </div>
+            <div class="screen__output" id="display"></div>
         </div>
         <div class="buttons">
             <div class="column">
-                <button class="button button--function button--ac" data-type="clear">AC</button>
-                <button class="button" data-type="number" data-value="7">7</button>
-                <button class="button" data-type="number" data-value="4">4</button>
-                <button class="button" data-type="number" data-value="1">1</button>
-                <button class="button" data-type="number" data-value=".">.</button>
+                <button class="button button--function button--ac" data-type="clear" data-key="8">AC</button>
+                <button class="button" data-type="number" data-value="7" data-key="55">7</button>
+                <button class="button" data-type="number" data-value="4" data-key="52">4</button>
+                <button class="button" data-type="number" data-value="1" data-key="49">1</button>
+                <button class="button" data-type="decimal" data-value="." data-key="190">.</button>
             </div>
             <div class="column">
-                <button class="button button--function button--sign" data-type="sign" data-value="+/-">+/-</button>
-                <button class="button" data-type="number" data-value="8">8</button>
-                <button class="button" data-type="number" data-value="5">5</button>
-                <button class="button" data-type="number" data-value="2">2</button>
-                <button class="button button--zero" data-type="number" data-value="0">0</button>
+                <button class="button button--function button--sign" data-type="sign" data-value="+/-" data-key="192">+/-</button>
+                <button class="button" data-type="number" data-value="8" data-key="56">8</button>
+                <button class="button" data-type="number" data-value="5" data-key="53">5</button>
+                <button class="button" data-type="number" data-value="2" data-key="50">2</button>
+                <button class="button button--zero" data-type="number" data-value="0" data-key="48">0</button>
             </div>
             <div class="column">
-                <button class="button button--function button--percent" data-type="percent" data-value="%">%</button>
-                <button class="button" data-type="number" data-value="9">9</button>
-                <button class="button" data-type="number" data-value="6">6</button>
-                <button class="button" data-type="number" data-value="3">3</button>
-                <button class="button button--operator button--equal" data-type="equal" data-value="=">=</button>
+                <button class="button button--function button--percent" data-type="percent" data-value="%" data-key="80">%</button>
+                <button class="button" data-type="number" data-value="9" data-key="57">9</button>
+                <button class="button" data-type="number" data-value="6" data-key="54">6</button>
+                <button class="button" data-type="number" data-value="3" data-key="51">3</button>
+                <button class="button button--operator button--equal" data-type="equal" data-value="=" data-key="69">=</button>
             </div>
             <div class="column">
-                <button class="button button--operator" data-type="operator" data-value="*">×</button>
-                <button class="button button--operator" data-type="operator" data-value="/">÷</button>
-                <button class="button button--operator" data-type="operator" data-value="-">-</button>
-                <button class="button button--operator button--add" data-type="operator" data-value="+">+</button>
+                <button class="button button--operator" data-type="operator" data-value="*" data-key="88">×</button>
+                <button class="button button--operator" data-type="operator" data-value="/" data-key="68">÷</button>
+                <button class="button button--operator" data-type="operator" data-value="-" data-key="173">-</button>
+                <button class="button button--operator button--add" data-type="operator" data-value="+" data-key="61">+</button>
             </div>
         </div>
     </div>
