--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <button class="button" data-type="number" data-value="9" data-key="57">9</button>
                 <button class="button" data-type="number" data-value="6" data-key="54">6</button>
                 <button class="button" data-type="number" data-value="3" data-key="51">3</button>
-                <button class="button button--operator button--equal" data-type="equal" data-value="=" data-key="69">=</button>
+                <button class="button button--operator button--equal" data-type="equals" data-value="=" data-key="69">=</button>
             </div>
             <div class="column">
                 <button class="button button--operator" data-type="operator" data-value="*" data-key="88">×</button>
